--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
     justify-content:flex-start;
     
     min-width: 100%;
+    z-index: 3;
     
     
     
@@ -57,24 +58,41 @@
     justify-content: space-between;
     
 }
-.side-dom{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-    
-    min-width: 500px;
-    padding: 50px;
-    
-}
 .images{
     min-width: 40%;
     padding: 20px;
     border-radius: 200px;
     margin: 10px;
 }
-.side-bar{
+.side-dom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 500px;
+    padding: 50px;
+    box-shadow: -40px 30px 200px #f1ebeb; 
+    z-index: 1;
+  }
+  
+  .side-bar {
     min-width: 100%;
     font-size: 75px;
-    
-}
+    border-radius: 25px;
+    margin: 10px;
+    padding: 10px;
+    color: rgb(41, 40, 40);
+    background-color: #f6f4f4;
+    border: none;
+    cursor: grab;
+    cursor: pointer;
+    z-index: 2;
+    transition: all 0.3s;
+  }
+  
+  .side-bar:hover {
+    background-color: rgb(34, 34, 34);
+    color: white;
+    z-index: 2;
+    border:solid 5px;
+    border-color: aqua;
+  }
