--- a/style.css
+++ b/style.css
@@ -64,19 +64,32 @@
     border-radius: 200px;
     margin: 10px;
 }
+.side-dom:hover{
+    background-color: #111;
+    border: none;
+    box-shadow: -200px 20px 200px #181818;
+    min-width: 450px;
+    
+    
+    transition: all 0.5s;
+}
+
 .side-dom {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 500px;
+    
+    min-width: 150px;
     padding: 50px;
-    box-shadow: -40px 30px 200px #f1ebeb; 
+    border-left: 2px solid #ffffff ; 
     z-index: 1;
+    transition: all 0.3s;
   }
   
+  
   .side-bar {
-    min-width: 100%;
-    font-size: 75px;
+    min-width: 75%;
+    font-size: 20px;
     border-radius: 25px;
     margin: 10px;
     padding: 10px;
@@ -86,7 +99,10 @@
     cursor: grab;
     cursor: pointer;
     z-index: 2;
-    transition: all 0.3s;
+    transition: all 0.3s ease-in-out;
+    align-items: right;
+    
+    
   }
   
   .side-bar:hover {
@@ -94,5 +110,10 @@
     color: white;
     z-index: 2;
     border:solid 5px;
-    border-color: aqua;
+    border-color: rgb(255, 66, 132);
+    min-width: 100%;
+    font-size: 30px;
+    box-shadow: 1px 1px 35px rgb(255, 66, 132);
+    
   }
+
