--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@
     
 }
 .images{
+    
     max-width: 45%;
     padding: 20px;
     border-radius: 200px;
@@ -157,7 +158,7 @@
   
   .side-bar {
     min-width: 75%;
-    font-size: 20px;
+    font-size: 2.2vh;
     border-radius: 25px;
     margin: 10px;
     padding: 10px;
@@ -198,6 +199,9 @@
     padding: 20px;
     min-width: 95%;
     min-height: 100vh;
+    background-image: url(images/layered-waves-haikei.svg);
+    background-repeat: no-repeat;
+    background-size:cover;
   }
 .text-2{
     display: flex;
