--- a/style.css
+++ b/style.css
@@ -103,7 +103,6 @@
     
 }
 .images{
-    
     max-width: 45%;
     padding: 20px;
     border-radius: 200px;
@@ -158,7 +157,7 @@
   
   .side-bar {
     min-width: 75%;
-    font-size: 2.2vh;
+    font-size: 20px;
     border-radius: 25px;
     margin: 10px;
     padding: 10px;
@@ -199,9 +198,6 @@
     padding: 20px;
     min-width: 95%;
     min-height: 100vh;
-    background-image: url(images/layered-waves-haikei.svg);
-    background-repeat: no-repeat;
-    background-size:cover;
   }
 .text-2{
     display: flex;
@@ -225,3 +221,152 @@
 /* .html{
     scroll-behavior: smooth;
 } */
+
+
+
+
+
+@media screen and (max-width: 600px){
+    .header{
+        display: flex;
+        max-width: 100%;
+        justify-content: space-evenly;
+        margin: 0px;
+        padding: 0px;
+        flex-direction: row;
+    }
+    .me{
+        font-size: 20px;
+        font-weight: 700;
+        line-height: normal;
+        margin: 0px;
+        padding: 10px;
+        align-items: center;
+    }
+    .me:hover{
+        font-size: 20px;
+        font-weight: 700;
+        line-height: normal;
+        margin: 0px;
+        padding: 10px;
+        align-items: center;
+    }
+    .body{
+        max-width: 100%;
+        
+        display: flex;
+        flex-direction: column;
+        background-size:250%;
+        
+        background-position:top;
+        
+        
+    }
+    .text{
+        color: #F6F6F6;
+        font-size: 15px;
+        min-width: 90%;
+        text-align: left;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+        padding: 5px;
+        margin: 5px;
+        
+    }
+    .text:hover{
+        color: #F6F6F6;
+        font-size: 20px;
+        min-width: 90%;
+        text-align: left;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+        padding: 5px;
+        margin: 5px;
+        box-shadow: none;
+        
+    }
+    .main-body{
+        display: flex;
+        max-width: 100%;
+        flex-direction: column;
+        justify-content: center;
+            
+        
+        
+    }
+    .images{
+        width: 322px;
+        height: 430px;
+        flex-shrink: 0;
+        border-radius: 73px;
+        box-shadow: 0px 4px 32px 7px rgba(0, 0, 0, 0.09);
+        min-width: 322px;
+        min-height: auto;
+    }
+    .side-dom{
+        max-width: 100%;
+        flex-direction: row;
+        border: none;
+        display: flex;
+        justify-content: center;
+       
+    }
+    .side-dom:hover{
+        min-width:50%;
+        
+        flex-direction: row;
+        border: none;
+        display: flex;
+        justify-content: center;
+        box-shadow: none;
+        
+    }
+    .side-bar{
+        max-width: 10px;
+        min-width: 50%;
+        font-size: 25px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        
+        margin: 20px;
+        padding: 10px;
+        
+    }
+    .side-bar:hover{
+        max-width: 10px;
+        min-width: 50%;
+        font-size: 25px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        
+        margin: 20px;
+        padding: 10px;
+        
+    }
+    .button-dom{
+        max-width:100% ;
+        margin: 2px;
+        padding: 5px;
+        
+        
+    }
+    .button{
+        max-width: 250px;
+        justify-items:center;
+        padding: 2px;
+        font-size: 12px;
+        align-items: center;
+        text-align: center;
+        min-height: 35px;
+        min-width: 70px;
+    }
+
+    
+
+
+
+}
