--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
     display: flex;
     
     color: rgb(255, 255, 255);
-    font-size: 10vh;
+    font-size: 6vh;
     margin: 20px;
-    padding: 20px;
+    padding: 3px;
     transition: all 0.5s;
+    
 }
 .text{
     max-width: 30%;
@@ -22,10 +23,10 @@
 .text:hover{
     font-size: 4vh;
     max-width: 35%;
-    box-shadow: 1px -50px 35px rgb(255, 66, 132);
+    box-shadow: 1px 50px 300px rgb(255, 66, 132);
 }
 .me:hover{
-    font-size: 11vh;
+    font-size: 7vh;
     color:rgb(255, 66, 132);;
 }
 
@@ -70,12 +71,16 @@
 .header{
     background-color: rgb(25, 25, 25);
     display: flex;
-    max-height: 200px;
+    max-height: 100px;
     color: aliceblue;
     justify-content:flex-start;
     
     min-width: 100%;
-    z-index: 3;
+    z-index: 5;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     
     
     
@@ -84,7 +89,7 @@
 
 
 .body{
-
+    margin-top: 200px;
     background-color: #111;
     display:flex;
     flex-direction: column;
@@ -132,9 +137,9 @@
  
 
 .side-dom:hover{
-    background-color: #111;
+    
     border: none;
-    box-shadow: 1px -50px 35px rgb(255, 66, 132);
+    box-shadow: 1px 50px 300px rgb(255, 66, 132);
     min-width: 300px;
     
     
@@ -198,6 +203,11 @@
     padding: 20px;
     min-width: 95%;
     min-height: 100vh;
+    background-image: url(images/layered-waves-haikei.svg);
+    background-size:100%;
+        
+    background-position:bottom 75%;
+    background-repeat: no-repeat;
   }
 .text-2{
     display: flex;
@@ -209,7 +219,11 @@
     border-radius: 50px;
     align-items: center;
     justify-content: center;
+    background-image: url(images/layered-waves-haikei.svg);
+    background-size:cover;
     
+    
+    background-repeat: no-repeat;
     
     
 }
