--- a/style.css
+++ b/style.css
@@ -248,6 +248,10 @@
         margin: 0px;
         padding: 0px;
         flex-direction: row;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
     }
     .me{
         font-size: 20px;
